# langchain-kr

./: .gitignore  generate_pyproject.py  pyproject.toml
01-Basic/: 02-OpenAI-LLM.ipynb  03-LCEL.Ipynb  04-LCEL-Advanced.ipynb  05-Runnable.ipynb
02-Prompt/: 01-PromptTemplate.ipynb  02-FewShotTemplates.ipynb  03-LangChain-Hub.ipynb  04-Personal-Prompts.ipynb
03-OutputParser/: 01-PydanticOuputParser.ipynb  02-CommaSeparatedListOutputParser.ipynb  03-StructuredOutputParser.ipynb  04-JsonOutputParser.ipynb  05-PandasDataFrameOutputParser.ipynb  06-DatetimeOutputParser.ipynb  07-EnumOutputParser.ipynb  08-OutputFixingParser.ipynb
04-Model/: 01-Chat-Models.ipynb  02-Cache.ipynb  03-ModelSerialization.ipynb  04-TokenUsage.ipynb  05-Google-Generative-AI.ipynb  06-HuggingFace-Endpoint.ipynb  07-HuggingFace-Local.ipynb  08-Huggingface-Pipelines.ipynb  09-Ollama.ipynb  10-GPT4ALL.ipynb  11-Gemini-Video.ipynb
05-Memory/: 01-ConversationBufferMemory.ipynb  02-ConversationBufferWindowMemory.ipynb  03-ConversationTokenBufferMemory.ipynb  04-ConversationEntityMemory.ipynb  05-ConversationKnowledgeGraph.ipynb  06-ConversationSummary.ipynb  07-VectorStoreRetrieverMemory.ipynb  08-LCEL-add-memory.ipynb  09-Memory-using-SQLite.ipynb  10-Conversation-With-History.ipynb
06-DocumentLoader/: 00-Document-Loader.ipynb  01-PDF-Loader.ipynb  02-HWP-Loader.ipynb  03-CSV-Loader.ipynb  04-Excel-Loader.ipynb  05-Word-Loader.ipynb  06-PowerPoint-Loader.ipynb  07-WebBase-Loader.ipynb  08-TXT-Loader.ipynb  09-JSON-Loader.ipynb  10-Arxiv-Loader.ipynb  11-Directory-Loader.ipynb  12-UpstageLayoutAnalysisLoader.ipynb  13-Llamaparser.ipynb
07-TextSplitter/: 01-CharacterTextSplitter.ipynb  02-RecursiveCharacterTextSplitter.ipynb  03-TokenTextSplitter.ipynb  04-SemanticChunker.ipynb  05-CodeSplitter.ipynb  06-MarkdownHeaderTextSplitter.ipynb  07-HTMLHeaderTextSplitter.ipynb  08-RecursiveJsonSplitter.ipynb  5_Levels_Of_Text_Splitting.ipynb
08-Embeddings/: 01-OpenAIEmbeddings.ipynb  02-CacheBackedEmbeddings.ipynb  03-HuggingFaceEmbeddings.ipynb  04-UpstageEmbeddings.ipynb  05-OllamaEmbeddings.ipynb  06-llamacpp.ipynb  07-GPT4ALL.ipynb
09-VectorStore/: 02-FAISS.ipynb  03-Pinecone.ipynb
10-Retriever/: 01-VectorStoreRetriever.ipynb  02-ContextualCompressionRetriever.ipynb  03-EnsembleRetriever.ipynb  04-LongContextReorder.ipynb  05-ParentDocumentRetriever.ipynb  06-MultiQueryRetriever.ipynb  07-MultiVectorRetriever.ipynb  08-SelfQueryRetriever.ipynb  09-TimeWeightedVectorStoreRetriever.ipynb
Util/: __init__.py  stream_example.py  stream_utils.py  test_stream_utils.py
