[project]
name = "langchain-kr"
version = "0.1.0"
description = "LangChain 한국어 튜토리얼 및 예제 모음"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "altair>=5.5.0",
 "anthropic>=0.57.1",
 "beautifulsoup4>=4.13.4",
 "chromadb>=0.6.3",
 "elasticsearch>=8.18.1",
 "fastapi>=0.116.1",
 "flashrank>=0.2.10",
 "google-ai-generativelanguage>=0.6.18",
 "google-api-core>=1.34.1",
 "google-auth>=2.40.3",
 "google-generativeai",
 "google-search-results>=2.4.2",
 "googleapis-common-protos>=1.70.0",
 "gpt4all>=2.8.2",
 "httpx>=0.28.1",
 "httpx-sse>=0.4.0",
 "huggingface-hub>=0.29.3",
 "ipython>=9.4.0",
 "ipython-pygments-lexers>=1.1.1",
 "jinja2>=3.1.6",
 "jupyter>=1.1.1",
 "jupyter-client>=8.6.3",
 "jupyter-console>=6.6.3",
 "jupyter-core>=5.8.1",
 "jupyter-events>=0.12.0",
 "jupyter-lsp>=2.2.5",
 "jupyter-server>=2.16.0",
 "jupyter-server-terminals>=0.5.3",
 "jupyterlab>=4.3.8",
 "jupyterlab-pygments>=0.3.0",
 "jupyterlab-server>=2.27.3",
 "jupyterlab-widgets>=3.0.15",
 "kiwipiepy>=0.20.4",
 "kiwipiepy-model>=0.20.0",
 "konlpy>=0.6.0",
 "langchain>=0.3.21",
 "langchain-anthropic>=0.3.10",
 "langchain-aws>=0.2.28",
 "langchain-azure-ai>=0.1.2",
 "langchain-chroma>=0.2.2",
 "langchain-cohere>=0.4.3",
 "langchain-community>=0.3.20",
 "langchain-core>=0.3.46",
 "langchain-elasticsearch>=0.3.2",
 "langchain-experimental>=0.3.4",
 "langchain-google-genai>=2.1.0",
 "langchain-huggingface>=0.1.2",
 "langchain-milvus>=0.1.8",
 "langchain-ollama>=0.2.3",
 "langchain-openai>=0.3.9",
 "langchain-teddynote>=0.3.44",
 "langchain-text-splitters>=0.3.7",
 "langchainhub>=0.1.21",
 "langgraph>=0.3.18",
 "langgraph-checkpoint>=2.1.0",
 "langgraph-prebuilt>=0.1.8",
 "langgraph-sdk>=0.1.72",
 "langsmith>=0.3.18",
 "lxml>=5.3.1",
 "matplotlib>=3.10.1",
 "matplotlib-inline>=0.1.7",
 "nltk>=3.9.1",
 "notebook>=7.3.3",
 "notebook-shim>=0.2.4",
 "numpy>=1.26.4",
 "onnxruntime>=1.22.1",
 "open-clip-torch>=2.31.0",
 "openai>=1.67.0",
 "opencv-python>=4.11.0.86",
 "opentelemetry-instrumentation-fastapi>=0.56b0",
 "pandas>=2.2.3",
 "pdfplumber>=0.11.5",
 "pillow>=10.4.0",
 "pinecone>=5.4.2",
 "pinecone-client>=3.2.2",
 "pinecone-plugin-inference>=3.1.0",
 "pinecone-plugin-interface>=0.0.7",
 "pinecone-text>=0.10.0",
 "prometheus-client>=0.22.1",
 "pydantic>=2.10.6",
 "pydantic-core>=2.27.2",
 "pydantic-settings>=2.10.1",
 "pymongo>=4.13.2",
 "pymupdf>=1.25.4",
 "pymupdf4llm>=0.0.17",
 "pypdf>=4.3.1",
 "pypdfium2>=4.30.1",
 "python-dotenv>=1.0.1",
 "pyyaml>=6.0.2",
 "ragas>=0.2.14",
 "rank-bm25>=0.2.2",
 "rapidocr-onnxruntime>=1.4.4",
 "redis>=5.2.1",
 "requests>=2.32.4",
 "requests-oauthlib>=2.0.0",
 "requests-toolbelt>=1.0.0",
 "sagemaker>=2.248.2",
 "scikit-learn>=1.6.1",
 "scipy>=1.16.0",
 "seaborn>=0.13.2",
 "sentence-transformers>=5.0.0",
 "sqlalchemy>=2.0.39",
 "streamlit>=1.43.2",
 "torch>=2.7.1",
 "torchaudio>=2.7.1",
 "torchvision>=0.22.1",
 "transformers>=4.50.3",
 "types-pyyaml>=6.0.12.20250516",
 "types-requests>=2.32.4.20250611",
 "unstructured",
 "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [ "pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0", "black>=23.0.0", "isort>=5.12.0", "flake8>=6.0.0", "mypy>=1.15.0", "pre-commit>=3.5.0",]
onnx = [ "onnxruntime>=1.22.1", "rapidocr-onnxruntime>=1.4.4",]

[tool.black]
line-length = 88
target-version = [ "py311",]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
